--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -15,7 +15,7 @@ jobs:
       - run: yarn install
       - run: yarn build
 
-  publish-gpr:
+  publish:
     needs: build
     runs-on: ubuntu-latest
     permissions:
